sylva/base/static/css/base.css
/* ... */
#body
#homepage {
    padding-top: 0px;
}

#main
#footer.global {
    background: white;
    width: 1160px;
    position: relative;
    margin: auto;
    padding: 20px;
    /*z-index: -1;*/
}

#main #footer.global
.inside {
    border-top: solid 1px #DADADA;
    width: 100%;
    padding-top: 15px;
    padding-bottom: 25px;
}

#footer {
    display: block;
}

ol,ul {
    list-style: none;
}

#main header.global
nav.main,#main #footer.global .inside
.top {
    float: right;
}

#main #footer.global .inside a {
    color: #555;
    text-decoration: none;
}

#main #footer.global .inside a:hover {
    text-decoration: underline;
}



#content3 {
    /*  width:992px;*/
    min-height: 450px;
    /*  background:#1D5600;*/
    text-align: left;
    padding-top: 0px;
    padding-bottom: 5px;
    overflow: hidden;
}

#content3 p {
    text-align:justify;
    padding-bottom:10px;
}

.content3-block {
    width: 365px;
    float: left;
    margin-left: 1px;
}

.content3-block p {
    width:320px;
    float:left;
    text-align:left;
}

#content2 {
    /*  width:992px;*/
    min-height: 400px;
    /*  background:#1D5600;*/
    text-align: left;
    padding-top: 0px;
    padding-bottom: 5px;
    overflow: hidden;
}

#content2 p {
    text-align:justify;
    padding-bottom:10px;
}

.content2-first {
    width: 347px;
    float: left;
    padding-left: 2px;
}

.content2-second {
    width: 740px;
    float: left;
    padding-left: 30px;
}

.content2-block p {
    width:365px;
    float:left;
    text-align:left;
}

/* three column area, vertical dotted divider */
.content-divider {
    background: url(../img/content-divider.gif) no-repeat top center;
    width: 1px;
    min-height: 400px;
    float: left;
    padding: 0px 10px 0px 10px;
}

#content2 .content-divider {
    background: url(../img/content-divider.gif) repeat-y top center;
    width: 1px;
    min-height: 420px;
    float: left;
    padding: 0px 10px 0px 10px;
    margin-top: 0;
}
/* end divider */

/* end content 2 */

#element-info {
    overflow: hidden;
    width: 180px;
}

/*
    Paragraph customs
*/
p.slogan {
    text-align: center;
    font-size: 15px;
    font-family: Georgia;
    font-style: italic;
    font-weight: bold;
    color: #A19C60;
    text-shadow:0 1px 1px rgba(175,203,188,0.8);
}

.stronger {
    font-weight: bold;
    font-size: 1.2em;
}

/* Links */
a {
    color: #348E82;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

span.buttonLinkOption {
    vertical-align: middle;
    display: inline-block;
    margin-top: 2px;
    margin-left: 2px;
}

span.buttonLinkOption a {
    font-weight: bold;
}

p.forgot-password {
    vertical-align: middle;
    display: inline-block;
    margin-top: 17px;
    margin-left: 2px;
}

/* Defaults */
.button,
button,
input[type="text"],
input[type="password"],
input[type="email"],
input[type="submit"],
input[type="button"],
textarea,
select {
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
    display: block;
    font-size: 100%;
    text-decoration: none;
    padding: 5px 8px 5px 8px;
    margin: 2px 0px 2px 0px;
    background-color: white;
    border: none;
    border-top: solid 1px #DADADA;
    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
    width: 300px;
    vertical-align: middle;
}

.addButton {
    font-size: 105%;
    font-weight: 700;
    text-decoration: none;
    width: auto;
    display: inline-block;
    cursor: pointer;
    background: transparent url(../img/add-item_16.png) no-repeat left center;
    padding-left: 18px;
}

input[type="checkbox"],
input[type="radio"] {
    display: initial;
    width: auto;
    margin-top: -4px;
    display: inline;
}

form {
    max-width: 321px;
    display: inline;
}

#content2 form {
    max-width: initial;
}

#content3 form {
    max-width: initial;
}

#content2 a.delete-row {
    background: url(../img/recycle-full.png) no-repeat center 15px;
    height: 45px;
    display: block;
    padding: 0 0 0 2px;
    font-weight: bold;
}

#content3 a.delete-row {
    background: url(../img/recycle-full.png) no-repeat left -2px;
    height: 35px;
    padding: 10px 0 0 30px;
    font-weight: bold;
    margin-top: 18px;
    position: absolute;
}

#content3 .delete-rowupFiles {
    background: url(../img/recycle-full.png) no-repeat left -2px;
    height: 35px;
    padding: 10px 0 0 30px;
    font-weight: bold;
    float: right;
    position: relative;
    width: 15px;
    margin-top: -105px;
}

#content3 .delete-rowupLinks {
    background: url(../img/recycle-full.png) no-repeat left -2px;
    height: 35px;
    padding: 10px 0 0 30px;
    font-weight: bold;
    float: right;
    position: relative;
    width: 15px;
    margin-top: -100px;
}

#content3 .linkDelete,
#content3 .fileDelete {
    margin-top: -41px;
}

#content3 div.relationships a.delete-rowupProps {
    background: url(../img/recycle-full.png) no-repeat left -2px;
    height: 35px;
    padding: 10px 0 0 30px;
    font-weight: bold;
    float: right;
    position: relative;
    width: 15px;
    margin-top: -61px;
}

#content3 div.relationships a.delete-rowup {
    background: url(../img/recycle-full.png) no-repeat left -2px;
    height: 35px;
    padding: 10px 0 0 30px;
    font-weight: bold;
    float: right;
    position: relative;
    width: 15px;
    margin-top: -42px;
}

#content3 div.relationships a.delete-row {
    background: url(../img/recycle-full.png) no-repeat left -2px;
    height: 35px;
    padding: 10px 0 0 30px;
    font-weight: bold;
    float: right;
    position: relative;
    width: 15px;
    margin-top: 0px;
}

#content3 .relationship {
    border-radius: 3px;
    padding: 5px;
    cursor: pointer;
}

#content3 .relationship:hover {
    background-color: #D6E7DF;
}

#content3 .node-properties {
    padding: 5px;
}
/* ... */

